Criando uma nova versão da nossa aplicação

--- a/app-ts/k8s/deployment-v2.yaml
+++ b/app-ts/k8s/deployment-v2.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 
 metadata:
-  name: app-service-mesh
+  name: app-service-mesh-v2
 
 spec:
   replicas: 3
@@ -13,16 +13,16 @@ spec:
       maxUnavailable: 10%
   selector:
     matchLabels:
-      app: app-service-mesh
+      app: app-service-mesh-v2
   template:
     metadata:
       labels:
-        app: app-service-mesh
-        version: V1
+        app: app-service-mesh-v2
+        version: V2
     spec:
       containers:
         - name: app-service-mesh
-          image: danielrodriguess/app-service-mesh:v1
+          image: danielrodriguess/app-service-mesh:v2
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
