Definindo regras de roteamento

--- a/app-ts/k8s/destination-rule.yaml
+++ b/app-ts/k8s/destination-rule.yaml
@@ -5,11 +5,17 @@ metadata:
   name: app-service-mesh-dr
 
 spec:
-  host: app-service-mesh-svc
+  host: app-service-mesh-svc.app.svc.cluster.local
+  trafficPolicy:
+    loadBalancer:
+      simple: RANDOM
   subsets: 
   - name: V1
     labels:
       version: V1
+    trafficPolicy:
+      loadBalancer:
+        simple: LEAST_CONN
   - name: V2
     labels:
       version: V2
