--- a/app-ts/k8s/virtual-service.yaml
+++ b/app-ts/k8s/virtual-service.yaml
@@ -8,23 +8,38 @@ spec:
   hosts:
   - app-service-mesh-svc.app.svc.cluster.local
   http:
-  - name: "app-service-mesh-v2"
-    match:
-    - uri:
-        prefix: "/teste"
-    - uri:
-        prefix: "/teste-2"
-    rewrite:
-      uri: "/healthz"
-    route:
+    - fault:
+        # delay:
+        #   fixedDelay: 1s
+        #   percentage:
+        #     value: 5
+        abort:
+          httpStatus: 504
+          percentage:
+            value: 5
+      route:
       - destination:
-        host: pp-service-mesh-svc.app.svc.cluster.local
-        subset: V2
-  - name: "app-service-mesh-v1"
-    route:
-    - destination:
-        host: pp-service-mesh-svc.app.svc.cluster.local
-        subset: V1
+          host: app-service-mesh-svc.app.svc.cluster.local
+          subset: V1
+  # ex: regras de roteamento
+  # - name: "app-service-mesh-v2"
+  #   match:
+  #   - uri:
+  #       prefix: "/teste"
+  #   - uri:
+  #       prefix: "/teste-2"
+  #   rewrite:
+  #     uri: "/healthz"
+  #   route:
+  #     - destination:
+  #       host: pp-service-mesh-svc.app.svc.cluster.local
+  #       subset: V2
+  # - name: "app-service-mesh-v1"
+  #   route:
+  #   - destination:
+  #       host: pp-service-mesh-svc.app.svc.cluster.local
+  #       subset: V1
+    # exemplo de canary/split
     # - routes:
     #   - destination:
     #       host: app-service-mesh-svc.app.svc.cluster.local
