--- a/app-ts/k8s/gateway.yaml
+++ b/app-ts/k8s/gateway.yaml
@@ -1,16 +1,15 @@
-apiVersion: gateway.networking.k8s.io/v1
-kind: Gateway
+# apiVersion: gateway.networking.k8s.io/v1
+# kind: Gateway
 
-metadata:
-  name: app-service-mesh-gateway
+# metadata:
+#   name: app-service-mesh-gateway
 
-spec:
-  gatewayClassName: istio-waypoint
-  listeners:
-  - name: mesh
-    port: 15008
-    protocol: HBONE
-    allowedRoutes:
-      namespaces:
-        from: Same
-
+# spec:
+#   gatewayClassName: istio
+#   listeners:
+#   - name: http
+#     port: 80
+#     protocol: HTTP
+#     allowedRoutes:
+#       namespaces:
+#         from: Same
